# meshpatrol

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yaml
config/: thresholds-example.json
meshpatrol/: __main__.py
meshpatrol/static/: dashboard.css
